Fix spacing on <pre>

--- a/css/core.css
+++ b/css/core.css
@@ -67,6 +67,11 @@ pre {
 	font: 12px Menlo, Monaco, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New" , monospace;
 }
 
+pre p {
+	margin: 0;
+	text-indent: 0px;
+}
+
 a {
 	color: #4183c4;
 }
